--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
 .utmp/
+/[Aa]ssets/
+!/[Aa]ssets/Scripts
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
